--- a/style.css
+++ b/style.css
@@ -157,6 +157,17 @@ img {
     border-radius: 50%;
     height: 100px;
     width: 100px;
+    animation: floating 3s infinite linear;
+}
+
+@keyframes floating {
+    0% {
+        transform: translateY(0);
+    } 50% {
+        transform: translateY(-10px);
+    } 100% {
+        transform: translateY(0);
+    }
 }
 
 h1 {
